# BoxPeer-Web

./: Cargo.toml  README.md
frontend/: .env  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  main.tsx  type.ts
frontend/src/pages/: CallbackPage.tsx  Content.tsx  ContentDetails.tsx  Footer.tsx  Home.tsx  HomePage.css  Nav.tsx  Wallet.tsx
frontend/src/utils/: create_keypair.ts
src/: main.rs  net.rs  node.rs
